[package]
name = "flagfy-build-engine"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Maciel <rafamaciel@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com//flagfy/build-engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
walkdir = "2.5"
wasm-bindgen = "0.2"

